gitops/apps/japon-landing-concept/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: japon-landing-concept
  namespace: japon-landing-concept
spec:
  type: ClusterIP
  selector:
    app: japon-landing-concept
  ports:
    - name: http
      port: 80
      targetPort: 80
