gitops/apps/japon-landing-concept/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: japon-landing-concept
  namespace: japon-landing-concept
spec:
  parentRefs:
    - name: traefik
      namespace: gateway-system
  hostnames:
    - "japon-landing-concept.ismola.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: japon-landing-concept
          port: 80
