gitops/apps/japon-landing-concept/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: japon-landing-concept
  namespace: japon-landing-concept
spec:
  ingressClassName: traefik
  rules:
    - host: ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: japon-landing-concept
                port:
                  number: 80
